syntax = "proto3";

package calendar;

import "google/protobuf/timestamp.proto";

option go_package = "api;calendar";


service Calendar {
  rpc AddEvent (AddEventRequest) returns (EventResponse) {};
  rpc DropEvent (DropEventRequest) returns (SuccessResponse) {};
  rpc EditEvent (EditEventRequest) returns (EventResponse) {};
  rpc GetEvent (GetEventRequest) returns (EventResponse) {};
  rpc AllEvents (AllEventsRequest) returns (AllEventsResponse) {};
}

message Event {
  int32 id = 1;
  int32 user_id = 2;
  google.protobuf.Timestamp datetimefrom = 3;
  google.protobuf.Timestamp datetimeto = 4;
  string description = 5;
}

message AddEventRequest {
  Event event = 1;
}

message SuccessResponse {
  bool success = 1;
}

message DropEventRequest {
  int32 user_id = 1;
  int32 event_id = 2;
}

message EditEventRequest {
  Event new_event = 1;
}

message GetEventRequest {
  int32 user_id = 1;
  int32 event_id = 2;
}

message EventResponse {
  bool success = 1;
  Event event = 2;
}

message AllEventsRequest {
  int32 user_id = 1;
}

message AllEventsResponse {
  repeated Event events = 1;
}
